<resources>
    <string name="app_name" translatable="false">MyAgenda</string>
    <string name="title_main">Mon Programme</string>
    <string name="btn_add_task">Ajouter au programme</string>
    <string name="btn_clear_all">Supprimer</string>
    <string name="subtitle_task_list">Evenement passés</string>
    <string name="subtitle_add_task">Ajouter un evenement</string>
    <string name="label_name">Intitulé</string>
    <string name="label_category">Categorie</string>
    <string name="btn_cancel">Annuler</string>
    <string name="btn_valide_task">Ajouter au programme</string>
    <string name="label_name_category">Name of category</string>
    <string name="dialog_btn_cancel">Annuler</string>
    <string name="dialog_btn_add">Ajouter</string>
    <string name="label_limit_date">Date</string>
    <string name="initial_category_perso">Personnel</string>
    <string name="initial_category_pro">Travail</string>
    <string name="btn_finish_task">Finish</string>
    <string name="task_priority">Priority</string>
    <string name="create_date_task">Create at %s</string>
    <string name="finish_date_task">Finish at %s</string>
    <string name="limit_date_task">Limit date at %s</string>
    <string name="date_pattern">MMMM dd. yyyy</string>
    <string name="weather">Meteo</string>
    <string name="new_task">Ajouter un evenement </string>
    <string name="no_event">Pas de rendez-vous ce jour :)</string>
    <string-array name="categorie">
        <item>Personnel</item>
        <item>Travail</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>