<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        style="@style/title_app"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_add_task"
        android:layout_marginTop="10dp"
        style="@style/subtitle_app"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_form"
        android:layout_marginBottom="@dimen/margin_form">

        <TextView
            android:layout_width="@dimen/width_label"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            />

        <EditText
            android:id="@+id/et_add_task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_form"
        android:layout_marginBottom="@dimen/margin_form">

        <TextView
            android:layout_width="@dimen/width_label"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:text="@string/label_category"
            />

        <Spinner
            android:id="@+id/sp_add_task_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_add_task_new_category"
            android:layout_marginStart="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/btn_add_category"
            android:gravity="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_form"
        android:layout_marginBottom="@dimen/margin_form">

        <TextView
            android:layout_width="@dimen/width_label"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:text="@string/label_limit_date"
            />

        <EditText
            android:id="@+id/et_add_task_limit_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            />

        <ImageView
            android:id="@+id/img_add_task_open_calendar"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_add_task_valid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_valide_task"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/white"



            />

        <View
            android:layout_width="@dimen/default_margin_btn"
            android:layout_height="0dp"
            />

        <Button
            android:id="@+id/btn_add_task_cancel"
            android:layout_width="wrap_content"
            android:maxWidth="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/white"

            />

    </LinearLayout>

</LinearLayout>